--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@discordjs/core": "^0.6.0",
     "discord.js": "^14.11.0",
     "dotenv": "^16.3.1",
-    "got": "^13.0.0",
+    "got": "11.8.2",
     "luxon": "^3.3.0",
     "reflect-metadata": "^0.1.13",
     "typedi": "^0.10.0",
