--- a/package.json
+++ b/package.json
@@ -18,13 +18,18 @@
     "@discordjs/core": "^0.6.0",
     "discord.js": "^14.11.0",
     "dotenv": "^16.3.1",
+    "got": "11.8.2",
     "luxon": "^3.3.0",
     "reflect-metadata": "^0.1.13",
     "typedi": "^0.10.0",
+    "typescript": "^5.2.2",
+    "uuid": "^9.0.1",
     "winston": "^3.9.0",
     "winston-daily-rotate-file": "^4.7.1"
   },
   "devDependencies": {
-    "@types/luxon": "^3.3.0"
+    "@types/got": "^9.6.12",
+    "@types/luxon": "^3.3.0",
+    "@types/uuid": "^9.0.5"
   }
 }
