--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "lint:fix": "eslint ./ --ext .ts --fix"
   },
   "dependencies": {
-    "@discordjs/builders": "^0.6.0",
-    "@discordjs/core": "^0.6.0",
+    "@discordjs/builders": "^1.6.0",
+    "@discordjs/core": "^1.0.1",
     "@discordjs/rest": "^2.0.1",
     "discord-api-types": "^0.37.61",
     "discord.js": "^14.11.0",
@@ -39,6 +39,7 @@
     "eslint": "^7.21.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-prettier": "^8.8.0",
+    "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-prettier": "^4.2.1",
     "prettier": "^2.8.7"
