--- a/package.json
+++ b/package.json
@@ -18,21 +18,30 @@
     "@discordjs/builders": "^1.6.0",
     "@discordjs/core": "^1.0.1",
     "@discordjs/rest": "^2.0.1",
+    "@psibean/discord.js-pagination": "^4.0.0",
     "discord-api-types": "^0.37.61",
     "discord.js": "^14.11.0",
     "dotenv": "^16.3.1",
+    "easyqrcodejs-nodejs": "^4.4.0",
     "got": "11.8.2",
+    "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.21",
     "luxon": "^3.3.0",
+    "node-schedule": "^2.0.0",
     "reflect-metadata": "^0.1.13",
     "typedi": "^0.10.0",
     "typescript": "^5.2.2",
+    "ucsd-quarters-years": "^1.1.0",
     "uuid": "^9.0.1",
     "winston": "^3.9.0",
     "winston-daily-rotate-file": "^4.7.1"
   },
   "devDependencies": {
     "@types/got": "^9.6.12",
+    "@types/jsonwebtoken": "^8.5.1",
+    "@types/lodash": "^4.14.168",
     "@types/luxon": "^3.3.0",
+    "@types/node-schedule": "^1.3.1",
     "@types/uuid": "^9.0.5",
     "@typescript-eslint/eslint-plugin": "^6.7.0",
     "@typescript-eslint/parser": "^6.7.0",
