--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@discordjs/core": "^1.0.1",
     "@discordjs/rest": "^2.0.1",
     "@psibean/discord.js-pagination": "^4.0.0",
+    "canvas": "^2.11.2",
     "discord-api-types": "^0.37.61",
     "discord.js": "^14.11.0",
     "dotenv": "^16.3.1",
